--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
  @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-
+html{
+  scroll-behavior: smooth;
+}
     body {
       margin: 0%;
       padding: 0%;
